kubernetes/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: config-server
    spec:
      containers:
      - image: habits/config-server
        imagePullPolicy: ""
        name: config-server
        ports:
        - containerPort: 8888
        resources: {}
      hostname: config-server
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
