kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: frontend
    spec:
      containers:
      - image: habits/frontend
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 80
        resources: {}
      hostname: frontend
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
