kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: kafka
    spec:
      containers:
      - env:
        - name: KAFKA_ADVERTISED_LISTENERS
          value: INSIDE://kafka:9093,OUTSIDE://127.0.0.1:9092
        - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
          value: "true"
        - name: KAFKA_INTER_BROKER_LISTENER_NAME
          value: INSIDE
        - name: KAFKA_LISTENERS
          value: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
          value: INSIDE:PLAINTEXT,OUTSIDE:SASL_PLAINTEXT
        - name: KAFKA_OPTS
          value: -Djava.security.auth.login.config=/etc/kafka/kafka_server_jaas.conf
        - name: KAFKA_SASL_ENABLED_MECHANISMS
          value: PLAIN
        - name: KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL
          value: PLAIN
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper:2181
        image: kafka
        imagePullPolicy: ""
        name: kafka
        ports:
        - containerPort: 9092
        - containerPort: 9093
        resources: {}
        volumeMounts:
        - mountPath: /etc/kafka
          name: kafkadata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: kafkadata
        persistentVolumeClaim:
          claimName: kafkadata
status: {}
