kubernetes/project-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: project-service
  name: project-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: project-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lan: "true"
        io.kompose.service: project-service
    spec:
      containers:
      - image: habits/project-service
        imagePullPolicy: ""
        name: project-service
        resources: {}
      hostname: project-service
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
