kubernetes/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: config-server
status:
  loadBalancer: {}
