kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: mongo
status:
  loadBalancer: {}
