kubernetes/registry-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert -f ..\docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: registry-service
  name: registry-service
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  selector:
    io.kompose.service: registry-service
status:
  loadBalancer: {}
